@@ -24,6 +24,7 @@ Version 1.2.1 (unreleased)
 * unify the I/O wait time counting to work like read/write time counting
 * simplify I/O time counting with scoped_{read,write,wait}_timer
 * more code cleanup
+* propagate region deletion (when blocks are freed) to the file level
 
 ------------------------------------------
 Version 1.2.0 (05 July 2008)
